Bug 92911 - rendercontext: missing post-it comment window after insertion
Summary: rendercontext: missing post-it comment window after insertion
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-24 10:29 UTC by Miklos Vajna
Modified: 2016-10-25 19:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
How it looks like currently (2.01 KB, image/png)
2015-07-24 10:29 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2015-07-24 10:29:20 UTC
Created attachment 117415 [details]
How it looks like currently

Start LO with:

VCL_DOUBLEBUFFERING_FORCE_ENABLE=1 SAL_USE_VCLPLUGIN=gtk ./soffice.bin

then start Writer, and insert a comment (ctrl-alt-c).

It looks like the attached image: gray placeholder instead of the usual yellow background with the button, etc.
Comment 1 Commit Notification 2015-07-24 11:13:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dcf94ab56d9e5e9864965f56d27045e67b093fa4

tdf#92911 SwAnnotationWin rendercontext: fix missing comment contents

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2015-07-24 13:39:15 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1e832328f527daee654c818eadf8ede723034d6f&h=libreoffice-5-0

tdf#92911 SwAnnotationWin rendercontext: fix missing comment contents

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.